--- a/VisualInspector/App.xaml
+++ b/VisualInspector/App.xaml
@@ -10,27 +10,43 @@
         
         <Style x:Key="filterToggleButton" TargetType="ToggleButton">
             <Setter Property="Background" Value="Gray"/>
-            <Setter Property="Height" Value="16"/>
-            <Setter Property="Width" Value="16"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Width" Value="20"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid>
-                            <Rectangle Stroke="Black" Fill="{TemplateBinding Background}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+                            <Rectangle Stroke="Black" Fill="{TemplateBinding Background}" Margin="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
                             <ContentPresenter/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Style.Triggers>
-                <Trigger Property="IsChecked" Value="False">
+                <Trigger Property="IsChecked" Value="True">
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate>
                                 <Grid>
-                                    <Rectangle Stroke="Black" Fill="Gray"
+                                    <Rectangle Stroke="Black" Fill="LightGray"
                                                VerticalAlignment="Stretch"
                                                HorizontalAlignment="Stretch"/>
+                                    <Rectangle Stroke="Black" Fill="{TemplateBinding Background}" Margin="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+                                    <ContentPresenter/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Grid>
+                                    <Rectangle Stroke="Black" Fill="Black"
+                                               VerticalAlignment="Stretch"
+                                               HorizontalAlignment="Stretch"/>
+                                    <Rectangle Stroke="Black" Fill="{TemplateBinding Background}" Margin="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
                                     <ContentPresenter/>
                                 </Grid>
                             </ControlTemplate>
