--- a/VisualInspector/Views/MainView.xaml
+++ b/VisualInspector/Views/MainView.xaml
@@ -32,14 +32,15 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Button Content="{Binding Number}" 
-                        Grid.Column="0" Margin="2, 0, 2, 0">
+                        Grid.Column="0" Margin="2, -1, 2, -1">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="Button">
-                                                <Border Margin="-4"
-                                                    BorderThickness="5" 
+                                                <Border Margin="1"
+                                                        BorderBrush="Black"
+                                                    BorderThickness="1" 
                                                     CornerRadius="10,0,10,0"
                                                     Background="LightGray">
                                                     <TextBlock
@@ -127,36 +128,24 @@
                 </ListBox.ItemTemplate>
                 <ListBox.Style>
                     <Style TargetType="ListBox">
-                        <Setter Property="Opacity" Value="0"/>
                         <Style.Triggers>
                             <DataTrigger 
                                 Binding="{Binding SelectedFrameList}" 
                                 Value="{x:Null}">
+                                <Setter Property="Visibility" Value="Hidden"/>
                                 <DataTrigger.ExitActions>
                                     <BeginStoryboard>
                                         <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                                                             From="0"
-                  To="1" Duration="0:0:1" />
+                                            <DoubleAnimation 
+                                                Storyboard.TargetProperty="Opacity"
+                                                From="0" To="1" Duration="0:0:1" />
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </DataTrigger.ExitActions>
                             </DataTrigger>
-
                         </Style.Triggers>
                     </Style>
                 </ListBox.Style>
-                <!--<ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                    <ContentPresenter/>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>-->
             </ListBox>
 
         </Grid>
